# quota

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  oauth_setup.py  pyproject.toml
prompts/: channels.md  cro.md  enablement.md  followup.md  inbox.md  outreach.md  scout.md  shared.md
src/: config.py  main.py  scheduler.py
src/agents/: base.py  channels.py  cro.py  digest.py  enablement.py  followup.py  inbox.py  outreach.py  scout.py
src/claude/: loop.py  prompts.py  tools.py
src/db/: models.py  session.py
src/email/: client.py  inbox.py
src/pipedrive/: client.py
src/routers/: api.py  health.py  heartbeats.py  webhooks.py
src/slack/: client.py
src/tools/: analytics_tools.py  attio_tools.py  dispatch_tools.py  email_tools.py  okr_tools.py  research_tools.py  slack_reply_tools.py  slack_tools.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  api.js  index.css
ui/src/components/: Layout.jsx
ui/src/pages/: AgentDetail.jsx  Agents.jsx  Dashboard.jsx  Login.jsx  Objectives.jsx  Runs.jsx
